Resultados/Aline/main/result_compilation.txt
In file included from tFantasma.c:1:
tFantasma.h:99:6: error: conflicting types for ‘DesalocaPacman’; have ‘void(tFantasma *)’
   99 | void DesalocaPacman(tFantasma* fantasma);
      |      ^~~~~~~~~~~~~~
In file included from tFantasma.h:7,
                 from tFantasma.c:1:
tPacman.h:150:6: note: previous declaration of ‘DesalocaPacman’ with type ‘void(tPacman *)’
  150 | void DesalocaPacman(tPacman* pacman);
      |      ^~~~~~~~~~~~~~
tFantasma.c: In function ‘AndaFantasmaHorizontal’:
tFantasma.c:65:12: warning: ‘return’ with a value, in function returning void [-Wreturn-type]
   65 |     return fantasma;
      |            ^~~~~~~~
tFantasma.c:47:6: note: declared here
   47 | void AndaFantasmaHorizontal(tFantasma* fantasma, tMapa* mapa){
      |      ^~~~~~~~~~~~~~~~~~~~~~
tFantasma.c: In function ‘AndaFantasmaVertical’:
tFantasma.c:86:12: warning: ‘return’ with a value, in function returning void [-Wreturn-type]
   86 |     return fantasma;
      |            ^~~~~~~~
tFantasma.c:68:6: note: declared here
   68 | void AndaFantasmaVertical(tFantasma* fantasma, tMapa* mapa){
      |      ^~~~~~~~~~~~~~~~~~~~
